# Rennaisance

./: .gitignore  CMakeLists.txt  main.cpp
include/renn/: GL.hpp  Shader.hpp  ShaderToyRenderer.hpp  Transform.hpp  Utils.h  Window.hpp
shaders/Phong/: simple.frag  simple.vert
shaders/Shadertoy/: Fractal.frag  Happy.frag
src/: Shader.cpp  ShaderToyRenderer.cpp  Transform.cpp  Utils.cpp  Viewer.cpp  Window.cpp
